Add new bulk create target controller
