# src/Controllers/Vulnerabilities/CreateVulnerabilityController.php
@@ -2,6 +2,7 @@
 
 namespace Reconmap\Controllers\Vulnerabilities;
 
+use Psr\Http\Message\ResponseInterface;
 use Psr\Http\Message\ServerRequestInterface;
 use Reconmap\Controllers\Controller;
 use Reconmap\Models\Vulnerability;
@@ -13,14 +14,15 @@ class CreateVulnerabilityController extends Controller
     {
     }
 
-    public function __invoke(ServerRequestInterface $request): array
+    public function __invoke(ServerRequestInterface $request): ResponseInterface
     {
         $vulnerability = $this->getJsonBodyDecodedAsClass($request, new Vulnerability());
 
         $vulnerability->creator_uid = $request->getAttribute('userId');
 
-        $result = $this->repository->insert($vulnerability);
+        $vulnerabilityId = $this->repository->insert($vulnerability);
+        $body = ['vulnerabilityId' => $vulnerabilityId];
 
-        return ['success' => $result];
+        return $this->createStatusCreatedResponse($body);
     }
 }
